<resources>
    <string name="app_name">StayHealthy</string>
    <string name="title_activity_sdk_demo">SdkDemo</string>
    <string name="no_route">您还没有行程</string>
    <string name="my_route">我的行程</string>
    <string name="bike_time">跑步时长</string>
    <string name="bike_distance">跑步距离</string>
    <string name="bike_price">运动步数</string>

    <string name="action_settings">Settings</string>
    <string name="bybike">跑步界面</string>
    <string name="findbike">找单车</string>
    <string name="current_address">北京市海淀区海淀北二街8号中关村SOHO</string>
    <string name="beijing">北京</string>
    <string name="foot">步行</string>
    <string name="distance">运动距离</string>
    <string name="each_hour">每小时</string>
    <string name="book">确定预约</string>
    <string name="unlock">开始跑步</string>
    <string name="unlock_auto">自动解锁</string>
    <string name="bike_code">车辆编码</string>
    <string name="book_countdown">保留倒计时</string>
    <string name="bike_sound">车辆发声</string>
    <string name="cancel_book">取消预约</string>
    <string name="cancel_book_toast">超过预约时间，系统已自动结束</string>
    <string name="code_unlock">输码解锁</string>
    <string name="code_prompt">在车锁和车头位置，已有车辆编码</string>
    <string name="unlock_im">立即解锁</string>
    <string name="wallet">我的钱包</string>
    <string name="route">我的行程</string>
    <string name="invite_friend">邀请好友</string>
    <string name="feedback">问题反馈</string>
    <string name="guide">使用指南</string>
    <string name="setting">设置</string>
    <string name="account_ballance">账户余额&#160;0&#160;元</string>
    <string name="transaction_type">请选择交易类型</string>
    <string name="charge_im">马上充值</string>
    <string name="routing">跑步中</string>
    <string name="price">Xxx步</string>
    <string name="route_detail">运动详情</string>
    <string name="route_replay">轨迹回放</string>
    <string name="net_wifi">现已链接到Wi-Fi网络</string>
    <string name="net_mobile">现已连接到移动网络</string>
    <string name="net_none">现已进入无网世界</string>

    <string name="routing_prompt">你已开启跑步模式，祝您跑步愉快~</string>
    <string name="book_prompt">你已开启跑步模式，祝您跑步愉快~</string>
    <string name="bike_exception_prompt">如果你发现车子有异常，点击取消</string>
    <string name="end">结束</string>
    <string name="end_route">结束\跑步</string>
    <string name="open_gps">请先打开GPS，提高定位准确度</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="navigation">导航</string>
    <string name="begin_navigation">开始导航</string>
    <string name="my_position">我的位置</string>
    <string name="input_start_place">输入起点</string>
    <string name="input_destination">输入终点</string>
    <string name="please_input_start_place">请输入起点</string>
    <string name="please_input_destination">请输入终点</string>
    <string name="inner_navi">内置导航</string>
    <string name="baidu_navi">百度地图</string>
    <string name="gaode_navi">高德地图</string>

    <string name="customactivityoncrash_error_activity_error_occurred_explanation">一个未知异常出现，抱歉给您带来不便\n请先使用其它功能，我们会尽快修复！</string>
    <string name="customactivityoncrash_error_activity_restart_app">重启</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">已复制</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>


    <string name="demo_title_location">demo_title_location</string>
    <string name="demo_desc_location">demo_desc_location</string>
    <string name="demo_title_geocode">demo_title_geocode</string>
    <string name="demo_desc_geocode">demo_desc_geocode</string>


    <string name="personal_information_one">完善资料1/2</string>
    <string name="personal_information_two">完善资料2/2</string>
    <string name="next">下一步</string>
    <string name="girl">女</string>
    <string name="boy">男</string>
    <string name="nick">昵称</string>
    <string name="birthday">生日</string>
    <string name="height">身高</string>
    <string name="please_write_nick">请填写昵称</string>
    <string name="please_write_birthday">请填写生日</string>
    <string name="please_write_height">请填写身高</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="cm">厘米</string>
    <string name="weight">体重</string>
    <string name="plan_weight">目标体重</string>
    <string name="now_weight">当前体重</string>
    <string name="kg">千克</string>
    <string name="length">步长</string>
    <string name="steps">步数</string>
    <string name="default_weight">50千克</string>
    <string name="default_weight_values">50</string>
    <string name="default_length_values">70</string>
    <string name="default_length">70千克</string>
    <string name="walk">先去逛逛</string>
    <string name="make_a_plan">制定计划</string>
    <string name="sport_txt">运动</string>
    <string name="class_txt">课程</string>
    <string name="find_txt">发现</string>
    <string name="heart_txt">心率</string>
    <string name="mine_txt">我的</string>
    <string name="target">健身目标</string>
    <string name="finish">完成</string>
    <string name="start_time">开始时间</string>
    <string name="stop_time">结束时间</string>
    <string name="set_start_time">请设置开始时间</string>
    <string name="set_stop_time">请设置结束时间</string>
    <string name="normal_weight_range">※您的健康体重范围应为：</string>
    <string name="warm_up">热身</string>
    <string name="mileage">0.00公里</string>
    <string name="heat">0.00大卡</string>
    <string name="km">公里</string>
    <string name="cal">大卡</string>
    <string name="city">城市：</string>
    <string name="city_name">城市：北京</string>
    <string name="temperature">温度：28℃</string>
    <string name="air_quality">空气质量：良</string>
    <string name="temperature_hint">温度：</string>
    <string name="temperature_unit">℃</string>
    <string name="quality">空气质量：</string>
    <string name="sport_history">运动历史</string>
    <string name="heathly">健康记录</string>
    <string name="about">关于我们</string>
    <string name="change_image">修改头像</string>
    <string name="change_nick">修改昵称</string>
    <string name="change_gender">修改性别</string>
    <string name="change_date">修改生日</string>
    <string name="default_date">2012-12-21</string>
    <string name="change_height">修改身高</string>
    <string name="change_length">修改步长</string>
    <string name="change_weight">修改体重</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="dialog_title">设置计划</string>
    <string name="http">QQ：4006751066</string>
    <string name="tel">电话：0431-84978981</string>
    <string name="email">邮箱:mingrisoft@mingrisoft.com</string>
    <string name="all">累计数据</string>
    <string name="find_day">记录列表</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
