<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.SportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="@dimen/width_size_5">
        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/width_size_10"
            android:text="@string/city_name"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"/>
        <TextView
            android:id="@+id/temperature"
            android:layout_width="@dimen/width_size_0"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_18"/>
        <TextView
            android:id="@+id/air_quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/width_size_10"
            android:text="天气：晴"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_16"
            android:background="@drawable/text_gray_background"/>
    </LinearLayout>

    <!-- 进度条 -->
    <mrkj.library.wheelview.circlebar.CircleBar
        android:id="@+id/show_progress"
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_size_0"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/want_steps"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/width_size_3"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/theme_blue_two"
        android:textSize="@dimen/font_size_18"
        android:text="目标步数"/>

    <!-- 显示路程和消耗的热量 -->
    <LinearLayout
        android:id="@+id/sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/width_size_10"
        android:layout_marginBottom="@dimen/width_size_10"
        android:paddingRight="@dimen/width_size_30"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="最近一次运动记录："
            android:textSize="17sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/mileage_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_18"
            android:drawableLeft="@mipmap/mrkj_mileage"
            android:text="@string/mileage"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/black"/>
        </LinearLayout>

    <TextView
        android:id="@+id/heat_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18sp"
        android:textSize="@dimen/font_size_18"
        android:drawableLeft="@mipmap/mrkj_heat"
        android:text="@string/heat"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="165dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="运动记录为空"
        android:textColor="@color/black"
        android:textSize="20sp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/watm_background_gray">

        <!-- 图片按钮 -->
        <!--<ImageButton
            android:id="@+id/warm_up"
            android:background="@null"
            android:layout_marginTop="@dimen/width_size_20"
            android:layout_width="@dimen/width_size_100"
            android:layout_height="@dimen/width_size_100"
            android:scaleType="fitXY"
            android:layout_centerInParent="true"
            android:src="@drawable/warm_up_selector" />-->
        <TextView
            android:id="@+id/warm_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="进入跑步界面"
            android:textSize="16sp"
            android:background="@drawable/bt_unlock_selector"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_marginTop="5dp"

            />

    </RelativeLayout>

</LinearLayout>