<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--<LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_343333"
        android:gravity="bottom"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_343333">

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bybike"
                android:textColor="@color/white"
                android:textSize="16sp" />
           </RelativeLayout>
    </LinearLayout>-->

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#106c99"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/back"
            android:clickable="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="跑步界面"
            android:textColor="#fff"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            />
      </RelativeLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/id_bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_layout"
        android:clickable="true" />

    <View
        android:id="@+id/shadow"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_layout"
        android:clickable="true"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/bike_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:layout_margin="12dp"
        android:background="@drawable/edge_shadow_bg"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bike_layout_margin"
        >



        <LinearLayout
            android:id="@+id/bike_distance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bike_layout_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_time"
                    style="@style/text_style"
                    android:text="跑步时长" />

                <TextView
                    android:id="@+id/bike_time"
                    style="@style/text_style"
                    android:textColor="@color/color_393939" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_distance"
                    style="@style/text_style"
                    android:text="跑步距离" />

                <TextView
                    android:id="@+id/bike_distance"
                    style="@style/text_style"
                    android:textColor="@color/color_393939"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_step_count"
                    style="@style/text_style"
                    android:text="运动步数"
                    />

                <TextView
                    android:id="@+id/tv_stpe_num"
                    style="@style/text_style"
                    android:textColor="@color/color_393939"
                    />
              </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bike_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bt_prompt_selector"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/book_prompt"
        android:textColor="@color/white_cc"
        android:textSize="15sp"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/prompt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prompt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt_prompt_selector"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="为了正确记录您的运动路径，请选择开阔场地跑步~"
        android:textColor="@color/white_cc"
        android:textSize="13sp"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


        <ImageView
            android:id="@+id/btn_locale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/get_location_icon" />

        <TextView
            android:id="@+id/unlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_unlock_selector"
            android:clickable="true"
            android:onClick="gotoCodeUnlock"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/unlock"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/sos"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/go"
            android:text="紧急求助"
            android:padding="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/end_route"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/go"
            android:text="@string/end_route"
            android:padding="12dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginRight="10dp"
            />
    </RelativeLayout>

</RelativeLayout>
